--- a/report_gallery.config
+++ b/report_gallery.config
@@ -8,3 +8,12 @@ add_heading_number = True
 include_foreword = False
 include_article_summary = False
 oss_dir = erdaoqu
+
+[mathDiagnosisK8_v1]
+base_dir = /home/huanglj/proj/report_gallery/sample
+entry = report_sample.ipynb
+toc_level = 2
+add_heading_number = True
+include_foreword = False
+include_article_summary = False
+oss_dir = mathDiagnosisK8_v1
