--- a/sample_env.config
+++ b/sample_env.config
@@ -8,8 +8,9 @@ out_queue_size = 20
 [aliyun]
 access_id = XXXX
 access_secret = XXXX
-oss_bucket_name = XXX
 oss_endpoint_name = oss-cn-beijing.aliyuncs.com
+oss_bucket_name = XXX
+dummy_oss_url = dummy.url.cn
 
 [kafka]
 bootstrap_servers = localhost:9092
