add mongodb backend support

--- a/sample_env.config
+++ b/sample_env.config
@@ -22,3 +22,12 @@ pwd = USER_PWD
 security_protocol = SASL_PLAINTEXT
 sasl_mechanism = PLAIN
 auto_offset_rst = earliest
+
+[mongodb]
+msg2db = False
+db_url = XXX
+db_port = 27017
+db_name = msgdb
+collection_name = msgs
+db_user = XXX
+db_pwd = XXX
