--- a/sample_env.config
+++ b/sample_env.config
@@ -4,6 +4,8 @@
 mp_worker_num = 10
 in_queue_size = 100
 out_queue_size = 20
+cache_queue_size = 200
+cache_max_time = 600
 
 [aliyun]
 access_id = XXXX
