update sample env file

--- a/sample_env.config
+++ b/sample_env.config
@@ -27,7 +27,7 @@ auto_offset_rst = earliest
 
 [mongodb]
 msg2db = False
-db_url = XXX
+db_url = mongodb.url.com
 db_port = 27017
 db_name = msgdb
 collection_name = msgs
