--- a/env.config.sample
+++ b/env.config.sample
@@ -30,6 +30,7 @@ msg2db = False
 db_url = mongodb.url.com
 db_port = 27017
 db_name = msgdb
-collection_name = msgs
+raw_msg_collection = msgs
+result_collection = report-results
 db_user = XXX
 db_pwd = XXX
