--- a/report_requester.config.sample
+++ b/report_requester.config.sample
@@ -2,6 +2,7 @@
 test_bootstrap_servers = test-kafka-server.com:9092
 production_bootstrap_servers = kafka-server.com:9092
 send_topic = SEND_TOPIC
+callback_topic = CALLBACK_TOPIC
 user = USER_NAME
 pwd = USER_PWD
 security_protocol = SASL_PLAINTEXT
