update sample env config file

--- a/env.config.sample
+++ b/env.config.sample
@@ -26,11 +26,11 @@ sasl_mechanism = PLAIN
 auto_offset_rst = earliest
 
 [mongodb]
-msg2db = False
-db_url = mongodb.url.com
-db_port = 27017
+url = mongodb.url.com:27017
+user = XXX
+pwd = XXX
+watch_db = watched_db_name
+pool_db = datapool_db_name
 db_name = msgdb
 raw_msg_collection = msgs
 result_collection = report-results
-db_user = XXX
-db_pwd = XXX
