--- a/env.config.sample
+++ b/env.config.sample
@@ -29,8 +29,8 @@ auto_offset_rst = earliest
 url = mongodb.url.com:27017
 user = XXX
 pwd = XXX
-watch_db = watched_db_name
+exams_db = watched_db_name
+question_db = question_db_name
 pool_db = datapool_db_name
-db_name = msgdb
-raw_msg_collection = msgs
-result_collection = report-results
+answer_sheet_collection = answerSheet
+result_collection = reportResult
