--- a/report_requester.config.sample
+++ b/report_requester.config.sample
@@ -1,5 +1,6 @@
 [kafka]
-test_servers = test-kafka-server.com:9092
+sundial_servers = inner-kafka-server.com:9092
+beta_servers = beta-kafka-server.com:9092
 production_servers = kafka-server.com:9092
 send_topic = SEND_TOPIC
 callback_topic = CALLBACK_TOPIC
